--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html {
     grid-column: 2/3;
     grid-row: 1/2;
     width: 100%;
+    height: 100%;
 }
 /*a flex item (top)*/
 .mortgage-type{
@@ -23,6 +24,10 @@ html {
 
 .inputs-container input{
     width: 99%;
+    font-size: 3rem;
+    border-color: rgb(7, 161, 7);
+    border-width: 1.5px;
+    border-radius: 4px;
 }
 
 .results-container{
