--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html, body {
 /*grid container*/
 .whole-container {
     display: grid;
-    height: 900px;
+    height: 105vh;
     grid-template-columns: 5% 90% 5%;
     grid-template-rows: 60% 40%;
     width: 100%;
@@ -32,6 +32,7 @@ html, body {
     margin-bottom: 0%;
 }
 
+
     /*General top-inputs on the top*/
 .inputs-container input /*All the inputs*/{
     height: 100%;
@@ -43,11 +44,9 @@ html, body {
 .top-inputs /*The container that holds the inputs and everthing else*/{
     padding-top: 5%;
 }
-
 .top-inputs div{
     display: flex;
 }
-
 .side-symbol /*All the boxes on the sides of the inputs*/ {
     display: flex;
     justify-content: center;
@@ -68,7 +67,6 @@ html, body {
     border-right: 1.8px solid gray;
     border-left-color: transparent;
 }
-
 .pound /*The box in the first input*/{
     width: 20%;
     border-top-left-radius: 4px;
@@ -81,7 +79,6 @@ html, body {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
-
 .years, .percentage{
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -92,7 +89,6 @@ html, body {
 .mortgage-term input{
     width: 75%;
 }
-
 .years{
     width: 25%;
 }
@@ -101,31 +97,32 @@ html, body {
 .interest-rate input{
     width: 80%;
 }
-
 .percentage{
     width: 20%;
 }
+
+
 
 /* Bottom of the top*/
 .mortgage-type{
     display: flex;
     flex-direction: column;
     padding-top: 2%;
+    height: 35%;
 }
-
 .two-options-inputs{
     display: flex;
     flex-direction: column;
     gap: 10%;
+    margin-bottom: 3%;
 }
+
 /*LOOK HERE*/
 .two-options-inputs input{
     width: 20%; /* Set the desired width */
     height: 20%; /* Set the desired height */
     margin: 0;
 }
-
-
 .two-options-inputs label{
     display: flex;
     cursor: pointer;
@@ -139,17 +136,28 @@ html, body {
     /*Font-size*/
     font-size: 1.2rem;
 }
-
 .two-options-inputs p {
     margin: 0;
 }
-
 .mortgage-type button{
     margin-top: 4%;
 }
 
+.mortgage-type button{
+    font-size: 1.5rem;
+    font-weight: 500;
+    height: 25%;
+    border-radius: 15px;
+    background-color: rgb(200, 188, 15);
+    box-sizing: border-box;
+    margin-top: 0%;
+}
 /*Bottom*/
 .results-container{
     grid-column: 2/3;
     grid-row: 2;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(20, 55, 82);
+    color: white;
 }
