--- a/styles.css
+++ b/styles.css
@@ -153,11 +153,24 @@ html, body {
     margin-top: 0%;
 }
 /*Bottom*/
-.results-container{
+
+.empty-results, .completed-results{
     grid-column: 2/3;
     grid-row: 2;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: rgb(20, 55, 82);
     color: white;
+}
+
+.empty-results{
+    z-index: 1;
+}
+
+
+.completed-results{
+    z-index: 0;
 }
