--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ html, body {
     font-family: 'Plus Jakarta Sans';
     font-style: italic;
 }
-/*grid container*/
+/*================= grid container ==================*/
 .whole-container {
     display: grid;
     height: 150vh;
@@ -14,10 +14,12 @@ html, body {
     grid-template-rows: 60% 40%;
     width: 100%;
 }
-/*grid elements top*/
+/* ============== Top Section Container =========== */
 .inputs-container {
     grid-column: 2/3;
     grid-row: 1/2;
+    display: grid;
+    grid-template-rows: 2fr 2fr 2fr 2fr 2fr 1.5fr;
     width: 100%;
     height: 100%;
 }
@@ -32,22 +34,29 @@ html, body {
     margin-bottom: 0%;
 }
 
+/* ============== Top Section (Elements) =========== */
+.title{
+    grid-row: 1/2;
+}
 
-    /*General top-inputs on the top*/
-.inputs-container input /*All the inputs*/{
+.top-inputs /*The container that holds the inputs and everthing else*/{
+    padding-top: 5%;
+    height: 13%;
+}
+
+.top-inputs div{
+    display: flex;
+}
+
+/*General top-inputs on the top*/
+.top-inputs input {
     height: 100%;
     width: 99%;
     font-size: 2rem;
     border-top: 1.8px solid gray;
     border-bottom: 1.8px solid gray;
 }
-.top-inputs /*The container that holds the inputs and everthing else*/{
-    padding-top: 5%;
-    height: 13%;
-}
-.top-inputs div{
-    display: flex;
-}
+
 .side-symbol /*All the boxes on the sides of the inputs*/ {
     display: flex;
     justify-content: center;
@@ -57,14 +66,15 @@ html, body {
     border-bottom: 1.8px solid gray;
 }
 
-    /*The font size of all the document elements*/
+/*The font size of top-inputs elements*/
 .top-inputs p{
     font-size: 1.5rem;
 }
 
-    /*Specific inputs on the top*/
-    /*1*/
-.mortgage-amount input /*The first input*/{
+/*============ Specific inputs on the top ===========*/
+
+/*1. The first input*/
+.mortgage-amount input {
     width: 80%;
     border-top-left-radius: 0%;
     border-bottom-left-radius: 0%;
@@ -73,15 +83,17 @@ html, body {
     border-right: 1.8px solid gray;
     border-left-color: transparent;
 }
-.pound /*The box in the first input*/{
+/*The box in the first input*/
+.pound {
     width: 20%;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     border-left: 1.5px solid gray;
 }
 
-    /*2-3*/
-.mortgage-term input, .interest-rate input /*The second input and teh third*/{
+/*2-3*/
+/*The second input and the third*/
+.mortgage-term input, .interest-rate input {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
@@ -91,7 +103,7 @@ html, body {
     border-right: 1.8px solid gray;
 }
 
-    /*2*/
+/*2.*/
 .mortgage-term input{
     width: 75%;
 }
@@ -99,7 +111,7 @@ html, body {
     width: 25%;
 }
 
-    /*3*/
+/*3.*/
 .interest-rate input{
     width: 80%;
 }
@@ -109,14 +121,15 @@ html, body {
 
 
 
-/* Bottom of the top*/
+/*================ Bottom of the top ================*/
 .mortgage-type{
     display: flex;
     flex-direction: column;
     padding-top: 2%;
-    height: 35%;
 }
-.two-options-inputs /*The container of the two options buttons*/{
+
+/*The container of the two options buttons*/
+.two-options-inputs {
     display: flex;
     flex-direction: column;
     gap: 10%;
@@ -124,8 +137,8 @@ html, body {
     height: 70%;
 }
 
-/*LOOK HERE*/
-.two-options-inputs label /*Both containers of the one-option buttons*/{
+/*Both two-option containers*/
+.two-options-inputs label {
     display: flex;
     cursor: pointer;
     gap: 20%;
@@ -137,17 +150,11 @@ html, body {
     font-size: 1.2rem;
     height: 10%;
 }
-.two-options-inputs input[type="radio"]{
-    height: 15px;
-    width: 50px;
-    margin: 0;
-}
 .two-options-inputs p {
     margin: 0;
 }
 
-
-.mortgage-type button{
+.button{
     font-size: 1.5rem;
     font-weight: 500;
     height: 25%;
@@ -157,8 +164,9 @@ html, body {
     box-sizing: border-box;
     margin-bottom: 2%;
 }
-/*Bottom*/
 
+/*====================== Bottom =====================*/
+/*The two results sections*/
 .empty-results, .completed-results{
     grid-column: 2/3;
     grid-row: 2;
@@ -177,8 +185,7 @@ html, body {
     z-index: 0;
 }
 
-/*Empty dives on the sides of the bottom section*/
-
+/*Empty divs on the sides of the bottom section*/
 .empty-left{
     grid-row: 2;
     grid-column: 1/2;
