--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ html, body {
 }
 
 .inputs-container p {
-    font-size: 1rem;
     margin: 0%;
     margin-bottom: 2%;
 }
@@ -37,40 +36,41 @@ html, body {
 /* ============== Top Section (Elements) =========== */
 .title{
     grid-row: 1/2;
+    margin-top: 5%;
 }
 
-.top-inputs /*The container that holds the inputs and everthing else*/{
+.top-inputs /*The container that holds the inputs, the subtitle and everthing else*/{
     box-sizing: border-box;
     height: 100%;
     width: 100%;
 }
 
-.top-inputs div{
+.input-boxes{
     display: flex;
-    align-items: stretch;
+    flex-direction: row;
     height: 40%;
 }
 
 /*General top-inputs on the top*/
-.top-inputs input {
+.input-boxes input {
     border-top: 1.8px solid gray;
     border-bottom: 1.8px solid gray;
-    height: 100%;
+    height: 99%;
 }
 
 .side-symbol /*All the boxes on the sides of the inputs*/ {
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgb(203, 233, 237);
-    border-top: 1.5px solid gray;
-    border-bottom: 1.8px solid gray;
-    height: 100%;
+    border: 1.8px solid gray;
     box-sizing: border-box;
+    font-size: 1.4rem;
 }
 
 /*The font size of top-inputs elements*/
-.top-inputs p{
+.top-inputs > p{
     font-size: 1.5rem;
 }
 
@@ -79,7 +79,6 @@ html, body {
 /*1. The first input-container*/
 .mortgage-amount{
     grid-rows: 2 / 3;
-    height: 100%;
 }
 /*The input*/
 .mortgage-amount input {
@@ -141,6 +140,10 @@ html, body {
     flex-direction: column;
     padding-top: 2%;
 }
+.mortgage-type > p{
+    font-size: 1.5rem;
+}
+
 
 /*The container of the two options buttons*/
 .two-options-inputs {
@@ -154,6 +157,7 @@ html, body {
 /*Both two-option containers*/
 .two-options-inputs label {
     display: flex;
+    align-items: center;
     cursor: pointer;
     gap: 20%;
     padding: 2%;
@@ -162,16 +166,16 @@ html, body {
     border-radius: 4px;
     /*Font-size*/
     font-size: 1.2rem;
-    height: 10%;
+    height: 30%;
 }
-.two-options-inputs p {
-    margin: 0;
+.two-options-inputs label p {
+    margin: 0%;
 }
 
-.button{
-    font-size: 1.5rem;
+button{
+    font-size: 1.8rem;
     font-weight: 500;
-    height: 25%;
+    height: 70%;
     border-radius: 15px;
     border: none;
     background-color: rgb(200, 188, 15);
