--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 150vh;
+    height: 140vh;
     width: 100%;
     padding: 0%;
     margin: 0%;
@@ -9,7 +9,7 @@ html, body {
 /*================= grid container ==================*/
 .whole-container {
     display: grid;
-    height: 150vh;
+    height: 100%;
     grid-template-columns: 5% 90% 5%;
     grid-template-rows: 60% 40%;
     width: 100%;
@@ -38,6 +38,10 @@ html, body {
     grid-row: 1/2;
     margin-top: 5%;
 }
+a{
+    text-decoration: underline;
+    cursor: pointer;
+}
 
 .top-inputs /*The container that holds the inputs, the subtitle and everthing else*/{
     box-sizing: border-box;
@@ -55,7 +59,7 @@ html, body {
 .input-boxes input {
     border-top: 1.8px solid gray;
     border-bottom: 1.8px solid gray;
-    height: 99%;
+    height: 100%;
 }
 
 .side-symbol /*All the boxes on the sides of the inputs*/ {
@@ -74,7 +78,7 @@ html, body {
     font-size: 1.5rem;
 }
 
-/*============ Specific inputs on the top ===========*/
+/*============ Specific inputs in the top ===========*/
 
 /*1. The first input-container*/
 .mortgage-amount{
@@ -88,7 +92,6 @@ html, body {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     border-right: 1.8px solid gray;
-    border-left-color: transparent;
 }
 /*The box in the first input*/
 .pound {
@@ -149,24 +152,25 @@ html, body {
 .two-options-inputs {
     display: flex;
     flex-direction: column;
-    gap: 10%;
+    gap: 5%;
     margin-bottom: 3%;
     height: 70%;
 }
 
 /*Both two-option containers*/
 .two-options-inputs label {
+    height: 30%;
+    padding: 2%;
+    gap: 10%;
     display: flex;
     align-items: center;
     cursor: pointer;
-    gap: 20%;
-    padding: 2%;
     /*border*/
     border: 1.5px solid rgb(7, 161, 7);
     border-radius: 4px;
     /*Font-size*/
-    font-size: 1.2rem;
-    height: 30%;
+    font-size: 1.4rem;
+    font-weight: 500;
 }
 .two-options-inputs label p {
     margin: 0%;
@@ -186,21 +190,38 @@ button{
 /*====================== Bottom =====================*/
 /*The two results sections*/
 .empty-results, .completed-results{
+    /*Measure and position*/
     grid-column: 2/3;
     grid-row: 2;
     height: 100%;
     width: 100%;
+    padding-top: 5%;
+    /*Box model*/
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    /*Color style*/
     background-color: rgb(20, 55, 82);
     color: white;
 }
+.empty-results > p, .completed-results p{
+    font-size: 1.5rem;
+    text-align: center;
+} 
+
+/*Individual containers*/
 .empty-results{
     z-index: 1;
 }
 .completed-results{
     z-index: 0;
+}
+
+/*The large object(the image of the calculator)*/
+object{
+    height: 50%;
 }
 
 /*Empty divs on the sides of the bottom section*/
