--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,11 @@ a{
 
 /*General top-inputs on the top*/
 .input-boxes input {
+    height: 100%;
+    box-sizing: border-box;
     border-top: 1.8px solid gray;
     border-bottom: 1.8px solid gray;
-    height: 100%;
+    font-size: 2rem;
 }
 
 .side-symbol /*All the boxes on the sides of the inputs*/ {
@@ -88,7 +90,6 @@ a{
 .mortgage-amount input {
     width: 80%;
     border-top-left-radius: 0%;
-    border-bottom-left-radius: 0%;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     border-right: 1.8px solid gray;
@@ -172,19 +173,26 @@ a{
     font-size: 1.4rem;
     font-weight: 500;
 }
+.two-options-inputs input{
+    height: clamp(20px, 10vh, 40px);
+    width: clamp(20px, 10vh, 30px);
+}
 .two-options-inputs label p {
     margin: 0%;
 }
 
 button{
-    font-size: 1.8rem;
-    font-weight: 500;
+    box-sizing: border-box;
     height: 70%;
+    /*Border*/
+    margin-bottom: 2%;
     border-radius: 15px;
     border: none;
+    /*Style*/
+    cursor: pointer;
+    font-size: 1.8rem;
+    font-weight: 500;
     background-color: rgb(200, 188, 15);
-    box-sizing: border-box;
-    margin-bottom: 2%;
 }
 
 /*====================== Bottom =====================*/
@@ -200,24 +208,42 @@ button{
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     /*Color style*/
     background-color: rgb(20, 55, 82);
     color: white;
 }
-.empty-results > p, .completed-results p{
+
+/*Individual containers*/
+.empty-results{
+    z-index: 0;
+    justify-content: center;
+    align-items: center;
+}
+.empty-results > p{
     font-size: 1.5rem;
     text-align: center;
 } 
 
-/*Individual containers*/
-.empty-results{
-    z-index: 1;
-}
 .completed-results{
-    z-index: 0;
+    z-index: 1;
+    display: grid;
+    padding-bottom: 10%;
 }
+.to-pay-fees /*Container with the two fees results*/{
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    width: fit-content;
+}
+/*Texts*/
+.completed-results p{
+    text-align: left;
+}
+.completed-results h1{
+    padding: 0%;
+}
+
+
 
 /*The large object(the image of the calculator)*/
 object{
