--- a/styles.css
+++ b/styles.css
@@ -358,7 +358,6 @@ object{
 @media only screen and (min-width: 992px) {
     html{
         height: 100vh;
-        background-color: aqua;
         padding: 0%;
         margin: 0%;
     }
@@ -367,6 +366,7 @@ object{
         width: 100%;
         display: flex;
         justify-content: center;
+        background-color: rgb(244, 236, 236);
     }
 
     .whole-container{
@@ -377,6 +377,8 @@ object{
         box-sizing: border-box;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
+        /*Style*/
+        box-shadow: -4px 4px 6px 0px rgba(0, 0, 0, 0.1);
     }
 
     /*Top*/
@@ -387,6 +389,12 @@ object{
         width: 100%;
         padding-left: 5%;
         padding-right: 5%;
+        /*Style*/
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        background-color: white;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
     }
 
     /*bottom*/
@@ -397,8 +405,9 @@ object{
         width: 100%;
         padding-left: 5%;
         padding-right: 5%;
-        border-radius: 10px;
         border-bottom-left-radius: 80px;
+        border-radius: 10px;
+        
     }
 
     .completed-results{
@@ -408,8 +417,8 @@ object{
         width: 100%;
         padding-left: 5%;
         padding-right: 5%;
-        border-radius: 10px;
         border-bottom-left-radius: 80px;
+        border-radius: 10px;
     }
     .completed-results h1{
         font-size: 1.5rem;
