--- a/styles/inputs.css
+++ b/styles/inputs.css
@@ -1,1 +1,90 @@
-/*# sourceMappingURL=inputs.css.map */
+/*============= General top-inputs on the top ================*/
+/*The font size of top-inputs elements*/
+.top-inputs {
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+}
+.top-inputs > p {
+  font-size: 1.5rem;
+}
+
+.input-boxes {
+  display: flex;
+  flex-direction: row;
+  height: 40%;
+}
+.input-boxes input {
+  height: 100%;
+  box-sizing: border-box;
+  border-top: 1.8px solid gray;
+  border-bottom: 1.8px solid gray;
+  font-size: 2rem;
+}
+.input-boxes .side-symbol {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(203, 233, 237);
+  border: 1.8px solid gray;
+  box-sizing: border-box;
+  font-size: 1.4rem;
+}
+
+/*================ Specific inputs in the top ==============*/
+/*1. The first input-container*/
+.mortgage-amount {
+  grid-row: 2/3;
+  /*The input*/
+  /*The box in the first input*/
+}
+.mortgage-amount input {
+  width: 80%;
+  border-top-left-radius: 0%;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-right: 1.8px solid gray;
+}
+.mortgage-amount .pound {
+  width: 20%;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-left: 1.5px solid gray;
+}
+
+/*2-3*/
+/*The second input and the third*/
+.mortgage-term input, .interest-rate input {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.mortgage-term .years, .mortgage-term .percentage, .interest-rate .years, .interest-rate .percentage {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-right: 1.8px solid gray;
+}
+
+/*2.*/
+.mortgage-term {
+  grid-row: 3/4;
+  height: 100%;
+}
+.mortgage-term input {
+  width: 75%;
+}
+.mortgage-term .years {
+  width: 25%;
+}
+
+/*3.*/
+.interest-rate {
+  grid-row: 4/5;
+  height: 100%;
+}
+.interest-rate input {
+  width: 80%;
+}
+.interest-rate .percentage {
+  width: 20%;
+}/*# sourceMappingURL=inputs.css.map */
